# frameMerge

./: .gitignore  README.md  example.sbatch  example.sh  main.py  pyproject.toml
.github/workflows/: publish.yml
frameMerge/: __init__.py  helpers.py  main.py  merger.py
tests/: test_merger.py
