[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frameMerge"
description = "Lightweight tool to merge crystallographic frames"
version = "0.0.1"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["crystallography", "data processing"]

license = "MIT"
license-files = ["LICENSE"]

authors = [{name = "Ryan ODea", email = "ryan.odea@psi.ch"}]
maintainers = [{name = "Ryan ODea", email = "ryan.odea@psi.ch"}]

requires-python = ">=3.8"
dependencies = [
    "h5py>=3.0.0",
    "bitshuffle>=0.3.0",
    "numpy>=1.20.0"
]

[tool.setuptools]
packages = ["frameMerge"]

[project.urls]
Repository = "https://github.com/ryan-odea/frameMerge"

[project.scripts]
frameMerge = "frameMerge.main:main"

[tool.setuptools.package-data]
"frameMerge" = ["*.py"]